Configuracion de clase direcciones y proyectos